Panel wrapping fix
When a panel text would wrap any labels from the title that wrapped
would maintain their padding and have an awkward offset.

--- a/resources/css/panels.css
+++ b/resources/css/panels.css
@@ -83,26 +83,3 @@
 	font-weight:400;
 	color:rgb(238,39,110);
 }
-
-.panels .panel .content h1 label{
-	display:inline-block;
-	
-	border:1px solid rgb(140,140,140);
-	-webkit-border-radius: 3px;
-	-moz-border-radius:    3px;
-	border-radius:         3px;
-	
-	padding:5px 7px;
-	margin:10px 7px;
-	
-	
-	font-family:Arial;
-	font-size:12px;
-	font-weight:400;
-	
-	vertical-align:middle;
-	
-	color:rgb(102,102,102);
-	
-	text-transform:uppercase;
-}
